学生动态，班级历史记录增加视频的显示和播放

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -114,7 +114,7 @@
 					//跳到历史记录
 					var self = this;
 					self.disabled = true;
-					events.openNewWindowWithData('keeprecord_history_0.html', {
+					events.openNewWindowWithData('keeprecord_history_a.html', {
 						type: 'history', //显示的类型
 						gid: show, //群id
 						dataIdArray: qunInfos[show].dataIdArray, //Key
