--- a/JiaoBaoYun-hb/html/cloud/app_statistics.html
+++ b/JiaoBaoYun-hb/html/cloud/app_statistics.html
@@ -317,7 +317,7 @@
 					var stuid = ids[2];
 					console.log('mui-table-view-cell ' + checkType + ' ' + month + ' ' + stuid);
 					//跳到统计详情
-					events.openNewWindowWithData('keeprecord_history_0.html', {
+					events.openNewWindowWithData('keeprecord_history_a.html', {
 						type: 'statistics', //显示的类型
 						gid: main.data.gid, //群id
 						statistics: {
