--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -70,7 +70,7 @@
 							<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
 						</div>
 						<div class="mui-media-body">
-							<p id="homeWorkContent" style="color: #747474;font-size: 15px;margin-bottom: 5px;"></p>
+							<p id="homeWorkContent" style="color: #b7b7b7;font-size: 15px;margin-bottom: 5px;"></p>
 							<div id="brief-imgs" class="brief-imgs"></div>
 							
 						</div>
