--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -79,6 +79,7 @@
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 		<script type="text/javascript" src="../../js/utils/recordvideoutil.js"></script>
 		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
+		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			var mainData; //记录数据
@@ -86,7 +87,6 @@
 			var QNUptoken; //token数据
 			var uploadNum = 0; //记录上传的次数
 			var hideOption; //隐藏键盘的数据
-
 			var multiMedia; //多媒体控件
 			var textArea = document.getElementById("textarea_record"); //输入框
 
@@ -136,31 +136,13 @@
 				 * @param {Object} data
 				 */
 				multiMedia.videoPlayCallBack = function(data) {
-					if(plus.os.name == 'Android') {
-						playutil.openFileAndroid(data.path, function(text) {
-							mui.toast(text);
-						});
-					} else if(plus.os.name == 'iOS') {
-						var video = document.getElementById("video");
-						video.src = data.path;
-						video.poster = data.localthumb;
-						mui('#videoPopover').popover('show');
-						var mask = mui.createMask(function() {
-							video.pause();
-							mui('#videoPopover').popover('hide');
-						});
-						mask.show();
-						video.play();
-					}
+					ShowVideoUtil.showVideo(document.getElementById("video"), 'videoPopover', data.path, data.localthumb);
 				}
+
 				hideOption = events.initHideKeyBoard(); //获取配置信息
 
 				//初始化播放器
-				var video = document.getElementById("video");
-				video.style.width = plus.screen.resolutionWidth + 'px';
-				video.style.height = parseInt(plus.screen.resolutionWidth * 3 / 4) + 'px';
-				video.style.marginTop = (plus.screen.resolutionHeight - 45 - plus.navigator.getStatusbarHeight() - parseInt(plus.screen.resolutionWidth * 3 / 4)) / 2 + 'px';
-
+				ShowVideoUtil.initVideo(document.getElementById("video"));
 			}
 
 			/*
