--- a/JiaoBaoYun-hb/html/cloud/member-pay.html
+++ b/JiaoBaoYun-hb/html/cloud/member-pay.html
@@ -9,7 +9,7 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<style>
-			.mui-table-view:before{
+			.mui-table-view:before {
 				height: 0;
 			}
 		</style>
@@ -29,13 +29,12 @@
 						费用详情
 					</li>
 					<li class="mui-table-view-cell">
-						<a class="">
-							普通会员
-						</a>
+						<p class="mui-pull-left" id='memberType' style="color: black;"></p>
+						<p class="mui-pull-right" id='memberTime'></p>
 					</li>
 					<li class="mui-table-view-cell">
-						<a class="">
-							总计
+						<a class="">总计
+							<p class="mui-pull-right" id="memberPay"></p>
 						</a>
 					</li>
 				</ul>
@@ -55,7 +54,14 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.plusReady(function() {
+				var tempModel = plus.webview.currentWebview().data;
+				console.log('tempModel=' + JSON.stringify(tempModel));
+				document.getElementById("memberType").innerText = tempModel.memberName;
+				document.getElementById("memberTime").innerText = tempModel.memberTime;
+				document.getElementById("memberPay").innerText = '￥'+tempModel.memberPay;
+			});
 		</script>
 	</body>
 
