修改首页标题栏

--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -23,10 +23,10 @@
 				</div>
 				<div id="slider" class="mui-slider deal-choose-container">
 					<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control normal-super">
-						<a class="mui-control-item mui-active" href="#normal-deal">
+						<a class="mui-control-item mui-active" href="#normal-deal" value="0">
 							普通会员
 						</a>
-						<a class="mui-control-item" href="#super-deal">
+						<a class="mui-control-item" href="#super-deal" value="1">
 							超级会员
 						</a>
 					</div>
