--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -28,13 +28,13 @@
 
 	<body>
 
-		<header id="index-header" class="mui-bar mui-bar-nav common-background-bar">
+		<!--<header id="index-header" class="mui-bar mui-bar-nav common-background-bar">
 			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
 				<h1 id="title" class="mui-title"></h1>
 			</div>
-		</header>
+		</header>-->
 
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
