--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -17,6 +17,11 @@
 	</head>
 
 	<body>
+		<header class="mui-bar mui-bar-nav">
+		    <a class="mui-icon"></a>
+		    <h1 class="mui-title">标题</h1>
+		    <a id="expertSearch" class="mui-icon mui-pull-right">搜索</a>
+		</header>
 		<div id="content" class="mui-content">
 			<!--频道导航栏-->
 			<div id="slider" class="mui-slider mui-fullscreen">
