更改云盘 和求知标题

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -18,9 +18,9 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-icon"></a>
-		    <h1 class="mui-title">标题</h1>
-		    <a id="expertSearch" class="mui-icon mui-pull-right">搜索</a>
+		    <a class="mui-icon img-icon"><img src="../../image/utils/default_personalimage.png" style="width: 30px;height: 30px;border-radius: 50%;"/></a>
+		    <h1 class="mui-title">求知</h1>
+		    <a id="expertSearch" class="mui-pull-right">搜索</a>
 		</header>
 		<div id="content" class="mui-content">
 			<!--频道导航栏-->
@@ -30,12 +30,6 @@
 						<a class="mui-control-item" href="#defalut"></a>
 					</div>
 				</div>
-				<!--额外导航按钮-->
-				<!--<div class="more-navigation">
-					<a class="iconfont icon-qita11">
-					</a>
-					<p>导航</p>
-				</div>-->
 				<!--配套设施-->
 				<div id="sliderGroup" class="mui-slider-group" style="height: 1px;">
 					<div id="defalut" class="mui-slider-item mui-control-content mui-active"></div>
