--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -155,6 +155,7 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-icon img-icon"><img src="../../image/utils/default_personalimage.png" style="width: 30px;height: 30px;border-radius: 50%;"/></a>
 		    <h1 class="mui-title">云盘</h1>
+		    <a id="add" class="mui-icon mui-pull-right iconfont icon-jiahao"></a>
 		</header>
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="visibility:hidden ;z-index:0">
 			<!--存储-->
