更改显示逻辑

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -223,6 +223,7 @@
 				</li>
 			</ul>
 		</div>
+		<script src="../../js/main/slide_navigation.js"></script>
 		<script type="text/javascript">
 			//每一行的高度
 			var cloudItemHeight = 0;
@@ -345,6 +346,7 @@
 				}
 			});
 			mui.plusReady(function() {
+				slideNavigation.add('../index/mine.html', 200);
 				changeData();
 				addcloudapps_0(); //应用
 				//下拉刷新
