--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -27,7 +27,8 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="slider_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted main-navigation">
 					<div id="subjects-container" class="mui-scroll">
-						<a class="mui-control-item" href="#defalut"></a>
+						<a class="mui-control-item mui-active" href="#defalut">1234</a>
+						<a class="mui-control-item" href="#defalut">123</a>
 					</div>
 				</div>
 				<!--配套设施-->
