--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -138,7 +138,7 @@
 			<a id="pubLeave" class=" mui-icon iconfont icon-xie  mui-pull-right mui-plus-visible common-color-white"></a>
 			<h1 class="mui-title">留言板</h1>
 		</header>
-		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0;background: #eaeaea;">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<ul id="list-container" class="mui-table-view">
