--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -503,8 +503,8 @@ none; margin-top: -15px;">登录</button>
 									//退出 界面更新
 									events.logOff();
 									events.infoChanged();
-//									mui.fire(plus.webview.getLaunchWebview(), 'login');
-//									events.hidePagesExIndex();
+									mui.fire(plus.webview.getWebviewById("index.html"), 'login');
+									events.hidePagesExIndex();
 									mui.back();
 								}
 							});
