--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -312,7 +312,7 @@
 										//										mui.toast('修改密码成功');
 										events.logOff();
 										events.infoChanged();
-										mui.fire(plus.webview.getLaunchWebview(), 'login');
+										mui.fire(plus.webview.getWebviewById("index.html"), 'login');
 										closeRegister();
 										mui.back();
 									} else if(tempFlag == 1) { //在设置里，修改密码
@@ -330,7 +330,7 @@
 												//退出登录
 												events.logOff();
 												events.infoChanged();
-												mui.fire(plus.webview.getLaunchWebview(), 'quit');
+												mui.fire(plus.webview.getWebviewById("index.html"), 'quit');
 												closeRegister(1);
 												mui.back();
 											}
@@ -351,7 +351,7 @@
 					events.logOff();
 					events.infoChanged();
 					//					events.openNewWindowWithData('../index/index.html', 'login');
-					mui.fire(plus.webview.getLaunchWebview(), 'login');
+					mui.fire(plus.webview.getWebviewById("index.html"), 'login');
 					closeRegister();
 					mui.back();
 					//					plus.webview.getLaunchWebview().show('slide-in-right', 250);
