--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -355,7 +355,7 @@
 						callback: function() {
 							var self = this;
 							//console.log("下拉刷新");
-							mui.fire(plus.webview.getLaunchWebview(), 'aboutmNoRead');
+							mui.fire(plus.webview.getWebviewById("index.html"), 'aboutmNoRead');
 							//文件存储数组
 							fileArray = [];
 							//获取所有的群
